; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shader.c_print_link_errors.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shader.c_print_link_errors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_INFO_LOG_LENGTH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"glGetProgramiv\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"glGetShaderInfoLog\00", align 1
@LOG_DEBUG = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [27 x i8] c"Linker warnings/errors:\0A%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @print_link_errors to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_link_errors(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  store i64 0, i64* %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @GL_INFO_LOG_LENGTH, align 4
  %8 = call i32 @glGetProgramiv(i32 %6, i32 %7, i64* %4)
  %9 = call i32 @gl_success(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i64, i64* %4, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %11, %1
  br label %29

15:                                               ; preds = %11
  %16 = load i64, i64* %4, align 8
  %17 = add nsw i64 %16, 1
  %18 = call i8* @calloc(i32 1, i64 %17)
  store i8* %18, i8** %3, align 8
  %19 = load i32, i32* %2, align 4
  %20 = load i64, i64* %4, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @glGetProgramInfoLog(i32 %19, i64 %20, i32* %5, i8* %21)
  %23 = call i32 @gl_success(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i32, i32* @LOG_DEBUG, align 4
  %25 = load i8*, i8** %3, align 8
  %26 = call i32 @blog(i32 %24, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i8* %25)
  %27 = load i8*, i8** %3, align 8
  %28 = call i32 @free(i8* %27)
  br label %29

29:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @glGetProgramiv(i32, i32, i64*) #1

declare dso_local i32 @gl_success(i8*) #1

declare dso_local i8* @calloc(i32, i64) #1

declare dso_local i32 @glGetProgramInfoLog(i32, i64, i32*, i8*) #1

declare dso_local i32 @blog(i32, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
